tests/paczka1/fuzzy1/28558593.err
Error in line 6: 2WFIn A782 75,5
Error in line 12: L8EeF4oC S131 69,0
Error in line 16: L8EeF4oC A782 7,0
Error in line 14: 2WFIn S131 473,0
Error in line 18: A782 A782 8,4
Error in line 28: 2WFIn A608 30,6
